--- a/public/V3/Farmers/create.html
+++ b/public/V3/Farmers/create.html
@@ -42,29 +42,33 @@
     <header>
         <div class="px-3 py-2 text-bg-dark border-bottom">
             <div class="container">
-                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-
+                <div class="d-flex flex-wrap align-items-center justify-content-between">
+                    <!-- Logo -->
                     <a href="/"
                         class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
                         <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
                         <span class="fs-4">KeshavSoft</span>
                     </a>
 
-                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                    <!-- Mobile Toggler -->
+                    <button class="navbar-toggler d-lg-none border-0 text-white" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#mobileNavbar">
+                        <i class="bi bi-list" style="font-size: 1.8rem;"></i>
+                    </button>
 
+                    <!-- Desktop Menu -->
+                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small d-none d-lg-flex">
                         <li>
                             <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
-
                         <li class="nav-item">
                             <a href="./Farmers.html" class="nav-link text-white d-flex flex-column align-items-center">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
                                 <span>Parent</span>
                             </a>
                         </li>
-
                         <li class="nav-item active">
                             <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
                                 href="./create.html">
@@ -72,38 +76,30 @@
                                 Insert
                             </a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./crud.html">
                                 <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Insert_F
                             </a>
                         </li>
-
                         <li class="nav-item">
-                            <a class="nav-link text-white rounded text-center "
-                                href="./tFInTH.html">
-                              <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
+                            <a class="nav-link text-white rounded text-center" href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
                             </a>
                         </li>
-
-
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
                                 <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Show
                             </a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./alter.html">
-                                <i class="bi bi-pencil-square l text-warning d-block mb-1"
-                                    style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Alter
                             </a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Delete.html">
                                 <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
@@ -111,16 +107,59 @@
                             </a>
                         </li>
                     </ul>
+                </div>
 
-
-
+                <!-- Mobile Collapse -->
+                <div class="collapse d-lg-none mt-3" id="mobileNavbar">
+                    <div class="row row-cols-3 g-2 text-center">
+                        <div class="col">
+                            <a href="../V2.html" class="nav-link text-white">
+                                <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./Farmers.html" class="nav-link text-white">
+                                <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i> Parent
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./create.html" class="nav-link text-white bg-light bg-opacity-25 rounded">
+                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1 fs-4"></i> Insert
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./crud.html" class="nav-link text-white">
+                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert_F
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./tFInTH.html" class="nav-link text-white">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i> Insert_H
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./show.html" class="nav-link text-white">
+                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i> Show
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./alter.html" class="nav-link text-white">
+                                <i class="bi bi-pencil-square text-warning d-block mb-1 fs-4"></i> Alter
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./Delete.html" class="nav-link text-white">
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Delete
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-
-
-
     </header>
+
     <main class="content">
         <div id="toolbar" class="">
             <a id="RefreshATagId" href="#"
@@ -136,7 +175,7 @@
             </a>
         </div>
         <div class="container">
-           <nav class="mt-2" aria-label="breadcrumb">
+            <nav class="mt-2" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-3">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
                     <li class="breadcrumb-item"><a href="./Farmers.html">Farmers</a></li>
@@ -144,64 +183,65 @@
             </nav>
             <div class="card mt-3">
                 <div class="card-body">
-                        <form onsubmit="return false" id="FormId">
-                            <div class="mb-3 row">
-                                <label class="col-sm-4 col-form-label">FarmerName</label>
-                                <div class="col-sm-8">
-                                    <input name="FarmerName" type="text" class="form-control" required
-                                        autocomplete="off" autofocus>
-                                    <div class="invalid-feedback">
-                                        FarmerName should not be empty!
-                                    </div>
+                    <form onsubmit="return false" id="FormId">
+                        <div class="mb-3 row">
+                            <label class="col-sm-4 col-form-label">FarmerName</label>
+                            <div class="col-sm-8">
+                                <input name="FarmerName" type="text" class="form-control" list="FarmerNameDataListId"
+                                    autocomplete="off" required autofocus>
+                                <datalist id="FarmerNameDataListId">
+                                </datalist>
+                                <div class="invalid-feedback">
+                                    FarmerName should not be empty!
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="mb-3 row">
-                                <label class="col-sm-4 col-form-label">FarmerMobile</label>
-                                <div class="col-sm-8">
-                                    <input name="FarmerMobile" type="tel" class="form-control" pattern="[0-9]{10}"
-                                        maxlength="10" required>
-                                    <div class="invalid-feedback">
-                                        Please enter a valid 10-digit FarmerMobile number!
-                                    </div>
+                        <div class="mb-3 row">
+                            <label class="col-sm-4 col-form-label">FarmerMobile</label>
+                            <div class="col-sm-8">
+                                <input name="FarmerMobile" type="tel" class="form-control" pattern="[0-9]{10}"
+                                    maxlength="10">
+                                <div class="invalid-feedback">
+                                    Please enter a valid 10-digit FarmerMobile number!
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="mb-3 row">
-                                <label class="col-sm-4 col-form-label">FarmerCity</label>
-                                <div class="col-sm-8">
-                                    <input name="FarmerCity" type="text" class="form-control" required>
-                                    <div class="invalid-feedback">
-                                        Please enter FarmerCity
-                                    </div>
+                        <div class="mb-3 row">
+                            <label class="col-sm-4 col-form-label">FarmerCity</label>
+                            <div class="col-sm-8">
+                                <input name="FarmerCity" type="text" class="form-control">
+                                <div class="invalid-feedback">
+                                    Please enter FarmerCity
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="mb-3 row">
-                                <label class="col-sm-4 col-form-label">FarmerField</label>
-                                <div class="col-sm-8">
-                                    <input name="FarmerField" type="text" class="form-control" required>
-                                    <div class="invalid-feedback">
-                                        Please enter FarmerField
-                                    </div>
+                        <div class="mb-3 row">
+                            <label class="col-sm-4 col-form-label">FarmerField</label>
+                            <div class="col-sm-8">
+                                <input name="FarmerField" type="text" class="form-control">
+                                <div class="invalid-feedback">
+                                    Please enter FarmerField
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="text-center mt-4">
-                                <button id="SaveButtonId"
-                                    class="btn btn-primary px-4 RefreshBSTableClass">Create</button>
-                            </div>
-                        </form>
-                        <!-- <div id="responseAlert" class="alert alert-info alert-dismissible fade show d-none mt-3"
+                        <div class="text-center mt-4">
+                            <button id="SaveButtonId" class="btn btn-primary px-4 RefreshBSTableClass">Create</button>
+                        </div>
+                    </form>
+                    <!-- <div id="responseAlert" class="alert alert-info alert-dismissible fade show d-none mt-3"
                         role="alert">
                         <span class="alert-message"></span>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div> -->
-                    </div>
                 </div>
-
-
             </div>
+
+
+        </div>
     </main>
 
     <footer class="mt-5 border-top text-dark" style="margin-top: 7rem !important;">
