--- a/public/V3/Items/tFInTH.html
+++ b/public/V3/Items/tFInTH.html
@@ -60,7 +60,7 @@
                     <!-- Desktop Nav -->
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small d-none d-lg-flex">
                         <li>
-                            <a href="../V2.html" class="nav-link text-white text-center">
+                            <a href="../V3.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -112,7 +112,7 @@
                 <div class="collapse d-lg-none mt-3" id="mobileNavbar">
                     <div class="row row-cols-3 g-2 text-center">
                         <div class="col">
-                            <a href="../V2.html" class="nav-link text-white">
+                            <a href="../V3.html" class="nav-link text-white">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </div>
@@ -162,29 +162,16 @@
     </header>
 
     <main class="content">
-        <div id="toolbar" class="">
-            <a id="RefreshATagId" href="#"
-                class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-gray-600 text-white"
-                style="width: 40px; height: 40px; border-radius: 50%;">
-                <svg class="icon icon-xs" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16"
-                    width="16" height="16">
-                    <path
-                        d="M1.161 8a6.84 6.84 0 1 0 6.842-6.84.58.58 0 1 1 0-1.16 8 8 0 1 1-6.556 3.412l-.663-.577a.58.58 0 0 1 .227-.997l2.52-.69a.58.58 0 0 1 .728.633l-.332 2.592a.58.58 0 0 1-.956.364l-.643-.56A6.8 6.8 0 0 0 1.16 8z" />
-                    <path
-                        d="M6.641 11.671V8.843h1.57l1.498 2.828h1.314L9.377 8.665c.897-.3 1.427-1.106 1.427-2.1 0-1.37-.943-2.246-2.456-2.246H5.5v7.352zm0-3.75V5.277h1.57c.881 0 1.416.499 1.416 1.32 0 .84-.504 1.324-1.386 1.324z" />
-                </svg>
-            </a>
-        </div>
         <div class="container">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
+            <nav class="mt-3" aria-label="breadcrumb">
+                <ol class="breadcrumb mb-3">
+                    <li class="breadcrumb-item"><a href="../V3.html" class="bi bi-house me-1"></i></a>
                     </li>
                     </a>
                     <li class="breadcrumb-item"><a href="./Items.html">Items</a></li>
                     <li class="breadcrumb-item " aria-current="page">Insert Header</li>
             </nav>
-            <div class="card mt-5">
+            <div class="card mt-4">
                 <div class="card-body">
                     <div class="table-responsive">
                         <table id="table" class="table" data-show-footer="true">
