--- a/public/V3/Sales/crud.html
+++ b/public/V3/Sales/crud.html
@@ -60,7 +60,7 @@
                     <!-- Desktop Menu -->
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small d-none d-lg-flex">
                         <li>
-                            <a href="../V2.html" class="nav-link text-white text-center">
+                            <a href="../V3.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -97,7 +97,7 @@
                 <div class="collapse d-lg-none mt-3" id="mobileNavbar">
                     <div class="row row-cols-3 g-2 text-center">
                         <div class="col">
-                            <a href="../V2.html" class="nav-link text-white">
+                            <a href="../V3.html" class="nav-link text-white">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </div>
@@ -132,9 +132,9 @@
 
     <main class="content">
         <div class="container">
-            <nav aria-label="breadcrumb" class="mt-2">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
+            <nav class="mt-3" aria-label="breadcrumb">
+                <ol class="breadcrumb mb-3">
+                    <li class="breadcrumb-item"><a href="../V3.html" class="bi bi-house me-1"></i></a>
                     <li class="breadcrumb-item"><a href="./Sales.html">Sales</a></li>
                     <li class="breadcrumb-item"><a href="#" class="RefreshBSTableClass">Insert in footer</a></li>
             </nav>
