--- a/public/V3/Sales/vertical.html
+++ b/public/V3/Sales/vertical.html
@@ -133,9 +133,9 @@
             </a>
         </div>
         <div class="container">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
+            <nav class="mt-3" aria-label="breadcrumb">
+                <ol class="breadcrumb mb-3">
+                    <li class="breadcrumb-item"><a href="../V3.html" class="bi bi-house me-1"></i></a>
 
                     <li class="breadcrumb-item"><a href="./Sales.html">Sales</a></li>
                     <li class="breadcrumb-item">Insert<Footer></Footer></a></li>
