--- a/public/V3/V3.html
+++ b/public/V3/V3.html
@@ -51,7 +51,7 @@
                
                 <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                     <li>
-                        <a href="#" class="nav-link text-secondary text-center">
+                        <a href="../index.html" class="nav-link text-secondary text-center">
                             <i class="bi bi-house d-block mx-auto mb-1" style="font-size: 1.5rem;"></i>
                             <span class="d-block">Home</span>
                         </a>
