--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,17 @@
                     </div>
                 </div>
 
+                <div class="col-md-4">
+                    <div class="card shadow-lg border-0 rounded-4">
+                        <div class="card-header bg-gradient bg-info text-white text-center rounded-top-4">
+                            <h4 class="mb-0"><i class="bi bi-box-seam"></i> V3 </h4>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="./V3/V3.html" class="btn btn-outline-info btn-lg w-75">Access V3 Directory</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
