--- a/public/V3/Farmers/update.html
+++ b/public/V3/Farmers/update.html
@@ -75,14 +75,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-white text-center @@if (context.page === 'insert') { active }"
                                 href="./Create.html">
-                                <i class="bi bi-plus-circle-fill d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-plus-circle-fill text-primary  d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Insert
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white text-center @@if (context.page === 'insertFooter') { active }"
                                 href="./Create.html">
-                                <i class="bi bi-building-add d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Insert_F
                             </a>
                         </li>
@@ -96,21 +96,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-white text-center @@if (context.page === 'show') { active }"
                                 href="./show.html">
-                                <i class="bi bi-eye-fill d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Show
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white text-center @@if (context.page === 'alter') { active }"
                                 href="./Alter.html">
-                                <i class="bi bi-pencil-square d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Alter
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white text-center @@if (context.page === 'delete') { active }"
                                 href="./Delete.html">
-                                <i class="bi bi-trash-fill d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
