--- a/public/V3/Items/update.html
+++ b/public/V3/Items/update.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-    <header>
+     <header>
         <div class="px-3 py-2 text-bg-dark border-bottom">
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-between">
@@ -51,62 +51,110 @@
                         <span class="fs-4">KeshavSoft</span>
                     </a>
 
-                    <!-- Toggler for mobile -->
+                    <!-- Toggler for Mobile -->
                     <button class="navbar-toggler d-lg-none border-0 text-white" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarContent">
+                        data-bs-target="#mobileNavbar">
                         <i class="bi bi-list" style="font-size: 1.8rem;"></i>
                     </button>
 
-                    <!-- Navbar -->
-                    <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end" id="navbarContent">
-                        <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                    <!-- Desktop Nav -->
+                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small d-none d-lg-flex">
+                        <li>
+                            <a href="../V3.html" class="nav-link text-white text-center">
+                                <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./Items.html" class="nav-link text-white d-flex flex-column align-items-center">
+                                <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <span>Parent</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./create.html">
+                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
+                                    style="font-size: 1.5rem;"></i>
+                                Insert
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white rounded text-center" href="./insertfooter.html">
+                                <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i> Insert_F
+                            </a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link text-white text-center " href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert_H
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./show.html">
+                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i> Show
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link text-white text-center bg-light bg-opacity-25" href="./alter.html">
+                                <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Alter
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./Delete.html">
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Delete
+                            </a>
+                        </li>
+                    </ul>
+                </div>
 
-                            <li class="nav-item">
-                                <a href="../index.html" class="nav-link text-white text-center">
-                                    <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
-                                </a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a href="./Items.html"
-                                    class="nav-link text-white d-flex flex-column align-items-center">
-                                    <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
-                                    <span>Parent</span>
-                                </a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link text-white text-center" href="./Create.html">
-                                    <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
-                                        style="font-size: 1.5rem;"></i>
-                                    Insert
-                                </a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link text-white text-center" href="./show.html">
-                                    <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
-                                    Show
-                                </a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link text-white text-center" href="./Alter.html">
-                                    <i class="bi bi-pencil-square text-warning d-block mb-1"
-                                        style="font-size: 1.5rem;"></i>
-                                    Alter
-                                </a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link text-white text-center" href="./Delete.html">
-                                    <i class="bi bi-x-circle-fill text-danger d-block mb-1"
-                                        style="font-size: 1.5rem;"></i>
-                                    Delete
-                                </a>
-                            </li>
-
-                        </ul>
+                <!-- Mobile Nav -->
+                <div class="collapse d-lg-none mt-3" id="mobileNavbar">
+                    <div class="row row-cols-3 g-2 text-center">
+                        <div class="col">
+                            <a href="../V3.html" class="nav-link text-white">
+                                <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./Items.html" class="nav-link text-white">
+                                <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i> Parent
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./create.html" class="nav-link text-white">
+                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
+                                    style="font-size: 1.5rem;"></i> Insert
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./insertfooter.html" class="nav-link text-white">
+                                <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i> Insert_F
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./tFInTH.html" class="nav-link text-white bg-light bg-opacity-25 rounded">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert_H
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./show.html" class="nav-link text-white">
+                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i> Show
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./alter.html" class="nav-link text-white">
+                                <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Alter
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="./Delete.html" class="nav-link text-white">
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Delete
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
